--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
           <a class="home-link nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\about.html">ABOUT</a>
+          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\about.html">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\event.html">EVENT HIRE</a>
+          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\event.html">EVENT HIRE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\orders.html">CLICK & COLLECT</a>
+          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\orders.html">CLICK & COLLECT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\blog.html">BLOG</a>
+          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\blog.html">BLOG</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\contact.html">CONTACT US</a>
+          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\contact.html">CONTACT US</a>
         </li>
       </ul>
 
