--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <!-- Favicon -->
-  <link rel="icon" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Favicon.png">
+  <link rel="icon" href="Images\Favicon.png">
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
 
-    <img class="navbar-brand" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Logo 2.png" alt="Company Logo">
+    <img class="navbar-brand" src="Images/logo-2.png" alt="Company Logo">
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
 <div class="home-btn">
   <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 </div>
-    <img class="home-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Home Image.png" alt="Blue Brew Coffee Van">
+    <img class="home-img" src="images/home-img.png" alt="Blue Brew Coffee Van">
 </div>
 
 <!-- Home About Section -->
@@ -84,7 +84,7 @@
 
 <div class="home-about-content">
 
-  <img class="profile-pic" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Jem and Ben (circle).png" alt="Jem & Ben">
+  <img class="profile-pic" src="Images/jem-ben.png" (circle).png" alt="Jem & Ben">
   <p class="home-about-text">Ben and Jem are a young couple from West Sussex who founded Blue Brew through their passion for coffee and desire to build their own business. Blue Brew is available for private hire, please get in touch!                Feeling Brew? Have a Blue!</p>
 
 </div>
@@ -110,22 +110,22 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <h4 class="quote">"Great food and drink, especially the coffee! Staff are friendly and helpful. Always made to feel welcome and valued as a customer. <br> Definitely will return."</h4>
-        <img class="carousel-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Louis Testimonial.png" class="d-block w-100" alt="Louis Review">
+        <img class="carousel-img" src="Images/louis-testimonial.png" class="d-block w-100" alt="Louis Review">
         <h5 class="testimonial-label">Louis <br> <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_internal" target="_blank">Facebook</a>, May 2020</h5>
       </div>
       <div class="carousel-item">
         <h4 class="quote">"Popped here on my way to work and picked up a lovely brew from the #projectbluebrew van. The owners are lovely and clearly enjoy meeting people in their day to day. "</h4>
-        <img class="carousel-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Lee Testimonial.png" class="d-block w-100" alt="Lee Review">
+        <img class="carousel-img" src="Images/lee-testimonial.png" class="d-block w-100" alt="Lee Review">
         <h5 class="testimonial-label">Lee <br> <a href="https://www.google.com/search?q=blue+brew&oq=bl&aqs=chrome.0.69i59j69i57j69i59l2j69i60l4.688j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank">Google</a>, Aug 2019</h5>
       </div>
       <div class="carousel-item">
         <h4 class="quote">"Amazing cakes and coffee, a lovely way to spend a lockdown Sunday morning! Very friendly staff and very safe set up. <br> Thank you very much!"</h4>
-        <img class="carousel-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Emma Testimonial.png" class="d-block w-100" alt="Emma Review">
+        <img class="carousel-img" src="Images/emma-testimonial.png" class="d-block w-100" alt="Emma Review">
         <h5 class="testimonial-label">Emma <br> <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_internal" target="_blank">Facebook</a>, May 2020</span></h5>
       </div>
       <div class="carousel-item">
         <h4 class="quote">"Fabulous coffee and delicious looking pastries! Also possibly the best customer service ever when, about to miss a train, coffee was delivered at speed and with a huge smile. Thank you guys and keep up the great coffee!"</h4>
-        <img class="carousel-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Charlotte Testimonial.png" alt="Charlotte Review">
+        <img class="carousel-img" src="Images/charlotte-testimonial.png" alt="Charlotte Review">
         <h5 class="testimonial-label"> Charlotte <br> <a href="https://www.google.com/search?q=blue+brew&oq=bl&aqs=chrome.0.69i59j69i57j69i59l2j69i60l4.688j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank">Google</a>, Aug 2019</h5>
       </div>
 
@@ -147,12 +147,12 @@
 <div class="insta-section">
   <i class="insta-icon fab fa-instagram fa-2x"></i>
   <h2>Instagram</h2>
-  <img class="insta-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Insta img 1.PNG" alt="Insta Img 1">
-  <img class="insta-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Insta img 2.PNG" alt="Insta Img 2">
-  <img class="insta-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Insta img 3.PNG" alt="Insta Img 3">
-  <img class="insta-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Insta img 4.PNG" alt="Insta Img 4">
-  <img class="insta-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Insta img 5.PNG" alt="Insta Img 5">
-  <img class="insta-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Insta img 6.PNG" alt="Insta Img 6">
+  <img class="insta-img" src="Images/insta-img-1.PNG" alt="Insta Img 1">
+  <img class="insta-img" src="Images/insta-img-2.PNG" alt="Insta Img 2">
+  <img class="insta-img" src="Images/insta-img-3.PNG" alt="Insta Img 3">
+  <img class="insta-img" src="Images/insta-img-4.PNG" alt="Insta Img 4">
+  <img class="insta-img" src="Images/insta-img-5.PNG" alt="Insta Img 5">
+  <img class="insta-img" src="Images/insta-img-6.PNG" alt="Insta Img 6">
 
 </div>
 
