--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Blue Brew</title>
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -74,7 +74,7 @@
 <div class="home-btn">
   <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 </div>
-    <img class="home-img" src="images/home-img.png" alt="Blue Brew Coffee Van">
+    <img class="home-img" src="Images/home-img.png" alt="Blue Brew Coffee Van">
 </div>
 
 <!-- Home About Section -->
