--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <title>Blue Brew</title>
 
   <link rel="stylesheet" href="CSS/styles.css">
@@ -15,11 +17,11 @@
   <script src="https://kit.fontawesome.com/97f4617e8b.js" crossorigin="anonymous"></script>
 
 
-<!-- Favicon -->
-  <link rel="icon" href="Images\Favicon.png">
+  <!-- Favicon -->
+  <link rel="icon" href="Images/Favicon.png">
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
 
 
 </head>
@@ -29,169 +31,184 @@
 
   <!-- Navigation Bar -->
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;">
 
     <img class="navbar-brand" src="Images/logo-2.png" alt="Company Logo">
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
+
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
         <li class="nav-item active">
           <a class="home-link nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\about.html">ABOUT</a>
+          <a class="nav-link" href="Views/about.html">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\event.html">EVENT HIRE</a>
+          <a class="nav-link" href="Views/event.html">EVENT HIRE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\orders.html">CLICK & COLLECT</a>
+          <a class="nav-link" href="Views/menu.html">MENU</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\blog.html">BLOG</a>
+          <a class="nav-link" href="Views/blog.html">BLOG</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\contact.html">CONTACT US</a>
+          <a class="nav-link" href="Views/contact.html">CONTACT US</a>
         </li>
-      </ul>
 
-    </div>
+      </ul>
+      </div>
+
+
   </nav>
 
+  <!-- Home Image Section -->
 
-<!-- Home Image Section -->
+  <div class="covid-banner">
+    <div class="covid-banner-responsive">
+    <p class="covid-banner-text">** <strong>COVID-19 UPDATE:</strong> WE ARE CONTINUING TO TRADE. <br> PLEASE CHECK OUR SOCIAL MEDIA PAGES FOR THE LATEST LOCATION AND OPENING HOURS** </p>
+</div>
+  </div>
 
-<div class="covid-banner">
-  <p class="covid-banner-text" >** <strong>COVID-19 UPDATE:</strong> WE ARE CONTINUING TO TRADE. <br> PLEASE CHECK OUR SOCIAL MEDIA PAGES FOR THE LATEST LOCATION AND OPENING HOURS** </p>
+    <img class="home-img" src="Images/home-banner.png" alt="Blue Brew Coffee Van">
+
+
+  <!-- Home About Section -->
+
+<div class="call-to-action">
+<a href="Views/menu.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">MENU</a>
 </div>
 
-<div class="home-section">
+  <div class="home-about-section">
+    <h2>Jem & Ben</h2>
 
-<div class="home-btn">
-  <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
-</div>
-    <img class="home-img" src="Images/home-img.png" alt="Blue Brew Coffee Van">
-</div>
+        <img class="profile-pic" src="Images/jem-ben.png" alt="Jem & Ben">
 
-<!-- Home About Section -->
+      <p class="home-about-text">Ben and Jem are a young couple from West Sussex who founded Blue Brew through their passion for coffee and desire to build their own business. <br> <br> <a href="Views/about.html"> Read more about the business.</a> <br> <br> Blue Brew is available for private hire. <div class="call-to-action">
+        <a href="Views/event.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+      </div> <br> <strong> Feeling
+        Brew? Have a Blue! </strong> </p>
 
-<div class="home-about-section">
-  <h2>Jem & Ben</h2>
-
-<div class="home-about-content">
-
-  <img class="profile-pic" src="Images/jem-ben.png" (circle).png" alt="Jem & Ben">
-  <p class="home-about-text">Ben and Jem are a young couple from West Sussex who founded Blue Brew through their passion for coffee and desire to build their own business. Blue Brew is available for private hire, please get in touch!                Feeling Brew? Have a Blue!</p>
-
-</div>
-
-</div>
+        </div>
 
 
-  <hr class="dashed">
+    <hr class="dashed">
 
-  <!-- Testimonials Section -->
+    <!-- Testimonials Section -->
 
-  <section id="testimonials-section">
+    <section id="testimonials-section">
 
-    <h2>Our Customers Say...</h2>
+      <h2>Our Customers Say...</h2>
 
-  <div id="carouselExampleIndicators" class="carousel slide hover" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <h4 class="quote">"Great food and drink, especially the coffee! Staff are friendly and helpful. Always made to feel welcome and valued as a customer. <br> Definitely will return."</h4>
-        <img class="carousel-img" src="Images/louis-testimonial.png" class="d-block w-100" alt="Louis Review">
-        <h5 class="testimonial-label">Louis <br> <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_internal" target="_blank">Facebook</a>, May 2020</h5>
+      <div id="carouselExampleIndicators" class="carousel slide hover" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h4 class="quote">"Great food and drink, especially the coffee! Staff are friendly and helpful. Always made to feel welcome and valued as a customer. <br> Definitely will return."</h4>
+<br>
+          </div>
+          <div class="carousel-item">
+            <h4 class="quote">"Popped here on my way to work and picked up a lovely brew from the #projectbluebrew van. The owners are lovely and clearly enjoy meeting people in their day to day. "</h4>
+<br>
+          </div>
+          <div class="carousel-item">
+            <h4 class="quote">"Amazing cakes and coffee, a lovely way to spend a lockdown Sunday morning! Very friendly staff and very safe set up. <br> Thank you very much!"</h4>
+<br>
+          </div>
+          <div class="carousel-item">
+            <h4 class="quote">"Fabulous coffee and delicious looking pastries! Also possibly the best customer service ever when, about to miss a train, coffee was delivered at speed and with a huge smile. Thank you guys and keep up the great
+              coffee!"</h4>
+              <br>
+          </div>
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-btn sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-btn sr-only">Next</span>
+        </a>
       </div>
-      <div class="carousel-item">
-        <h4 class="quote">"Popped here on my way to work and picked up a lovely brew from the #projectbluebrew van. The owners are lovely and clearly enjoy meeting people in their day to day. "</h4>
-        <img class="carousel-img" src="Images/lee-testimonial.png" class="d-block w-100" alt="Lee Review">
-        <h5 class="testimonial-label">Lee <br> <a href="https://www.google.com/search?q=blue+brew&oq=bl&aqs=chrome.0.69i59j69i57j69i59l2j69i60l4.688j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank">Google</a>, Aug 2019</h5>
-      </div>
-      <div class="carousel-item">
-        <h4 class="quote">"Amazing cakes and coffee, a lovely way to spend a lockdown Sunday morning! Very friendly staff and very safe set up. <br> Thank you very much!"</h4>
-        <img class="carousel-img" src="Images/emma-testimonial.png" class="d-block w-100" alt="Emma Review">
-        <h5 class="testimonial-label">Emma <br> <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_internal" target="_blank">Facebook</a>, May 2020</span></h5>
-      </div>
-      <div class="carousel-item">
-        <h4 class="quote">"Fabulous coffee and delicious looking pastries! Also possibly the best customer service ever when, about to miss a train, coffee was delivered at speed and with a huge smile. Thank you guys and keep up the great coffee!"</h4>
-        <img class="carousel-img" src="Images/charlotte-testimonial.png" alt="Charlotte Review">
-        <h5 class="testimonial-label"> Charlotte <br> <a href="https://www.google.com/search?q=blue+brew&oq=bl&aqs=chrome.0.69i59j69i57j69i59l2j69i60l4.688j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank">Google</a>, Aug 2019</h5>
+
+      <p>Check out more reviews on Facebook & Google!</p>
+
+<div class="testimonials-icons">
+
+<span style="color: #72A3B3;">
+  <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_interna" target="_blank"><i class="social-icons fab fa-facebook-square fa-2x"></i></a>
+</span>
+
+<span style="color: #72A3B3;">
+  <a href="https://www.google.com/search?q=blue+brew&oq=blue&aqs=chrome.0.69i59j46j69i59j69i60l3j69i65j69i60.667j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank"><i class="fab fa-google fa-2x"></i></a>
+</span>
+
+</div>
+
+    </section>
+
+    <!-- Instagram Section -->
+
+    <div class="insta-section">
+      <i class="insta-icon fab fa-instagram fa-2x"></i>
+      <h2>Instagram</h2>
+      <img class="insta-img" src="Images/insta-img-1.PNG" alt="Insta Img 1">
+      <img class="insta-img" src="Images/insta-img-2.PNG" alt="Insta Img 2">
+      <img class="insta-img" src="Images/insta-img-3.PNG" alt="Insta Img 3">
+      <img class="insta-img" src="Images/insta-img-4.PNG" alt="Insta Img 4">
+      <img class="insta-img" src="Images/insta-img-5.PNG" alt="Insta Img 5">
+      <img class="insta-img" src="Images/insta-img-6.PNG" alt="Insta Img 6">
+
+    </div>
+
+    <!-- Home Footer -->
+
+    <div class="footer">
+
+      <div class="footer-display">
+        <a href="Views/contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+
+        <br>
+
+        <span style="color: #72A3B3;">
+          <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons fab fa-facebook-square fa-2x"></i></a>
+        </span>
+
+        <span style="color: #72A3B3;">
+          <a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons fab fa-instagram fa-2x"></i></a>
+        </span>
+
+        <h3 class="newsletter-text"><strong>JOIN OUR MAILING LIST</strong></h3>
+        <form>
+          <div class="form-group">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
+        </form>
+
+        <h6 class="footer-text"> © Blue Brew 2020 </h6>
+
       </div>
 
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="carousel-btn sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="carousel-btn sr-only">Next</span>
-    </a>
-  </div>
-
-  </section>
-
-<!-- Instagram Section -->
-
-<div class="insta-section">
-  <i class="insta-icon fab fa-instagram fa-2x"></i>
-  <h2>Instagram</h2>
-  <img class="insta-img" src="Images/insta-img-1.PNG" alt="Insta Img 1">
-  <img class="insta-img" src="Images/insta-img-2.PNG" alt="Insta Img 2">
-  <img class="insta-img" src="Images/insta-img-3.PNG" alt="Insta Img 3">
-  <img class="insta-img" src="Images/insta-img-4.PNG" alt="Insta Img 4">
-  <img class="insta-img" src="Images/insta-img-5.PNG" alt="Insta Img 5">
-  <img class="insta-img" src="Images/insta-img-6.PNG" alt="Insta Img 6">
-
-</div>
-
-  <!-- Home Footer -->
-
-  <div class="footer">
-
-<div class="footer-display">
-  <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
-
-<br>
-
-<span style="color: #72A3B3;">
-  <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons fab fa-facebook-square fa-2x"></i></a>
-</span>
-
-<span style="color: #72A3B3;">
-<a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons fab fa-instagram fa-2x"></i></a>
-</span>
-
-<h3 class="newsletter-text" ><strong>JOIN OUR MAILING LIST</strong></h3>
-<form>
-  <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
-</form>
-
-    <h6 class="footer-text"> © Blue Brew 2020 </h6>
-
-</div>
-
-  </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 
 </html>
