--- a/public/pages/cakes.html
+++ b/public/pages/cakes.html
@@ -24,6 +24,7 @@
 
 
   </head>
+
   <body>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
@@ -37,61 +38,111 @@
       <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">ABOUT</a>
+            <a class="nav-link" href="/about">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="event.html">EVENT HIRE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="menu.html">MENU</a>
+            <a class="nav-link" href="#">EVENT HIRE</a>
           </li>
           <li class="nav-item active">
-            <a class="home-link nav-link" href="#">BLOG</a>
+            <a class="home-link nav-link" href="/menu">MENU</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CONTACT US</a>
+            <a class="nav-link" href="/blog">BLOG</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/contact">CONTACT US</a>
           </li>
         </ul>
 
       </div>
     </nav>
 
-    <div class="page-body">
+<div class="page-body">
 
-    <div class="page-text">
-      <h2>Blog</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <br>
+<br>
+  <h2>Cakes & Snacks</h2>
 
-    <div class="blog-posts">
+<div class="page-text">
 
-    <h4>Post One</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...<a href="#"> <strong>Read More</strong></a></p>
-    <br>
-
-    <h4>Post Two</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...<a href="#"><strong>Read More</strong></a></p>
-    <br>
-
-    <h4>Post Three</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...<a href="#"><strong>Read More</strong></a></p>
-    <br>
+  <div class="row row-cols-1 row-cols-lg-3 row-cols-sm-1">
+  <div class="col mb-3">
+    <div class="card">
+      <img src="../Images/vic-sponge.PNG" class="card-img-top" alt="Victoria Sponge">
+      <div class="card-body">
+        <h5 class="card-title">Victoria Sponge (vegan)</h5>
+        <p class="card-text">£2.00 <i class="vegan-icon fas fa-seedling"></i> </p>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-3">
+    <div class="card">
+      <img src="../Images/lemon-drizzle.PNG" class="card-img-top" alt="Lemon Drizzle">
+      <div class="card-body">
+        <h5 class="card-title">Lemon Drizzle</h5>
+        <p class="card-text">£2.60</p>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-3">
+    <div class="card">
+      <img src="../Images/muffin.PNG" class="card-img-top" alt="Muffin">
+      <div class="card-body">
+        <h5 class="card-title">Biscoff Muffin (vegan)</h5>
+        <p class="card-text">£2.00 <i class="vegan-icon fas fa-seedling"></i> </p>
+      </div>
+    </div>
+  </div>
 </div>
 
+<div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
+<div class="col mb-4">
+  <div class="card">
+    <img src="../Images/brownie.PNG" class="card-img-top" alt="Brownie">
+    <div class="card-body">
+      <h5 class="card-title">Brownie</h5>
+      <p class="card-text">£2.00</p>
     </div>
+  </div>
+</div>
+<div class="col mb-4">
+  <div class="card">
+    <img src="../Images/rocky-road.PNG" class="card-img-top" alt="Rocky Road">
+    <div class="card-body">
+      <h5 class="card-title">Rocky Road</h5>
+      <p class="card-text">£1.60</p>
     </div>
+  </div>
+</div>
+<div class="col mb-4">
+  <div class="card">
+    <img src="../Images/choc-fudge.PNG" class="card-img-top" alt="Chocolate Fudge">
+    <div class="card-body">
+      <h5 class="card-title">Chocolate Fudge</h5>
+      <p class="card-text">£2.00</p>
+    </div>
+  </div>
+</div>
+<div class="col mb-4">
+  <div class="card">
+    <img src="../Images/cookies.PNG" class="card-img-top" alt="Cookie">
+    <div class="card-body">
+      <h5 class="card-title">Cookie</h5>
+      <p class="card-text">£1.60</p>
+    </div>
+  </div>
+</div>
+</div>
 
-<div class="page-breaks">
-
+</div>
 </div>
 
     <div class="footer">
 
   <div class="footer-display">
-    <a href="contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+    <a href="/contact" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 
   <br>
 
@@ -104,9 +155,9 @@
   </span>
 
   <h3 class="newsletter-text" ><strong>JOIN OUR MAILING LIST</strong></h3>
-  <form>
-    <div class="form-group">
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+  <form action="/cakes" method="POST">
+    <div class="newsletter-form form-group">
+      <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
