--- a/public/pages/drinks.html
+++ b/public/pages/drinks.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blue Brew</title>
-
-    <link rel="stylesheet" href="../CSS/styles.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>Blue Brew</title>
+
+    <link rel="stylesheet" href="../CSS/styles.css">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -38,44 +38,42 @@
       <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">EVENT HIRE</a>
           </li>
           <li class="nav-item active">
-            <a class="home-link nav-link" href="#">ABOUT</a>
+            <a class="home-link nav-link" href="/menu">MENU</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="event.html">EVENT HIRE</a>
+            <a class="nav-link" href="/blog">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="menu.html">MENU</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">BLOG</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">CONTACT US</a>
+          <a class="nav-link" href="/contact">CONTACT US</a>
           </li>
         </ul>
 
       </div>
     </nav>
 
-    <div class="page-body">
+<div class="page-body">
 
 <div class="page-text">
-      <h2>About Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <img class="drinks-blackboard" src="../Images/blackboard.PNG" alt="Drinks Blackboard">
+
+
 </div>
-    </div>
-
-    <div class="about-break">
-
-    </div>
+</div>
 
     <div class="footer">
 
   <div class="footer-display">
-    <a href="contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+    <a href="/contact" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 
   <br>
 
@@ -88,9 +86,9 @@
   </span>
 
   <h3 class="newsletter-text" ><strong>JOIN OUR MAILING LIST</strong></h3>
-  <form>
-    <div class="form-group">
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+  <form action="/drinks" method="POST">
+    <div class="newsletter-form form-group">
+      <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
