--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -8,7 +8,7 @@
 
   <title>Blue Brew</title>
 
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="../CSS/styles.css">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -16,13 +16,15 @@
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/97f4617e8b.js" crossorigin="anonymous"></script>
 
-
   <!-- Favicon -->
-  <link rel="icon" href="Images/Favicon.png">
+  <link rel="icon" href="../Images/Favicon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 
@@ -33,7 +35,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;">
 
-    <img class="navbar-brand" src="Images/logo-2.png" alt="Company Logo">
+    <img class="navbar-brand" src="../Images/logo-2.png" alt="Company Logo">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,19 +49,19 @@
           <a class="home-link nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Views/about.html">ABOUT</a>
+          <a class="nav-link" href="/about">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Views/event.html">EVENT HIRE</a>
+          <a class="nav-link" href="/eventhire">EVENT HIRE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Views/menu.html">MENU</a>
+          <a class="nav-link" href="/menu">MENU</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Views/blog.html">BLOG</a>
+          <a class="nav-link" href="/blog">BLOG</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Views/contact.html">CONTACT US</a>
+          <a class="nav-link" href="/contact">CONTACT US</a>
         </li>
 
       </ul>
@@ -76,27 +78,33 @@
 </div>
   </div>
 
-    <img class="home-img" src="Images/home-banner.png" alt="Blue Brew Coffee Van">
+    <img class="home-img" src="../Images/home-banner.png" alt="Blue Brew Coffee Van">
 
 
   <!-- Home About Section -->
 
-<div class="call-to-action">
-<a href="Views/menu.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">MENU</a>
+<div class="call-to-action" data-aos="zoom-in" >
+<a href="/menu" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">MENU</a>
 </div>
 
   <div class="home-about-section">
-    <h2>Jem & Ben</h2>
+    <h2>A bit about us...</h2>
 
-        <img class="profile-pic" src="Images/jem-ben.png" alt="Jem & Ben">
+    <div class="" data-aos="fade-up">
+        <img class="profile-pic" src="../Images/jem-ben.png" alt="Jem & Ben">
+</div>
+      <p class="home-about-text">We are a young couple from West Sussex who founded Blue Brew through our passion for coffee and desire to build our own business. <br> <br> <a href="/about"> Read more about our business.</a> <br> <br> Blue Brew is available for private hire. <div class="call-to-action">
+        <a href="/eventhire" role="button" data-aos="zoom-in" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 
-      <p class="home-about-text">Ben and Jem are a young couple from West Sussex who founded Blue Brew through their passion for coffee and desire to build their own business. <br> <br> <a href="Views/about.html"> Read more about the business.</a> <br> <br> Blue Brew is available for private hire. <div class="call-to-action">
-        <a href="Views/event.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
-      </div> <br> <strong> Feeling
-        Brew? Have a Blue! </strong> </p>
+      <br> <br>
+
+        <p>We look forward to seeing you soon!</p>
+
+        <p class="signature" >Jem & Ben</p>
+
+      </div>
 
         </div>
-
 
     <hr class="dashed">
 
@@ -147,13 +155,9 @@
 
 <div class="testimonials-icons">
 
-<span style="color: #72A3B3;">
-  <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_interna" target="_blank"><i class="social-icons fab fa-facebook-square fa-2x"></i></a>
-</span>
+  <a href="https://www.facebook.com/bluebrew2019/reviews/?ref=page_interna" target="_blank"><i class="social-icons-reviews fab fa-facebook-square fa-2x"></i></a>
 
-<span style="color: #72A3B3;">
-  <a href="https://www.google.com/search?q=blue+brew&oq=blue&aqs=chrome.0.69i59j46j69i59j69i60l3j69i65j69i60.667j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank"><i class="fab fa-google fa-2x"></i></a>
-</span>
+  <a href="https://www.google.com/search?q=blue+brew&oq=blue&aqs=chrome.0.69i59j46j69i59j69i60l3j69i65j69i60.667j0j7&sourceid=chrome&ie=UTF-8#lrd=0x4875a36cf6a24481:0x9d0e1cc726b1546b,1" target="_blank"><i class="social-icons-reviews fab fa-google fa-2x"></i></a>
 
 </div>
 
@@ -164,12 +168,12 @@
     <div class="insta-section">
       <i class="insta-icon fab fa-instagram fa-2x"></i>
       <h2>Instagram</h2>
-      <img class="insta-img" src="Images/insta-img-1.PNG" alt="Insta Img 1">
-      <img class="insta-img" src="Images/insta-img-2.PNG" alt="Insta Img 2">
-      <img class="insta-img" src="Images/insta-img-3.PNG" alt="Insta Img 3">
-      <img class="insta-img" src="Images/insta-img-4.PNG" alt="Insta Img 4">
-      <img class="insta-img" src="Images/insta-img-5.PNG" alt="Insta Img 5">
-      <img class="insta-img" src="Images/insta-img-6.PNG" alt="Insta Img 6">
+      <img class="insta-img" src="../Images/insta-img-1.PNG" alt="Insta Img 1">
+      <img class="insta-img" src="../Images/insta-img-2.PNG" alt="Insta Img 2">
+      <img class="insta-img" src="../Images/insta-img-3.PNG" alt="Insta Img 3">
+      <img class="insta-img" src="../Images/insta-img-4.PNG" alt="Insta Img 4">
+      <img class="insta-img" src="../Images/insta-img-5.PNG" alt="Insta Img 5">
+      <img class="insta-img" src="../Images/insta-img-6.PNG" alt="Insta Img 6">
 
     </div>
 
@@ -178,7 +182,7 @@
     <div class="footer">
 
       <div class="footer-display">
-        <a href="Views/contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+        <a href="/contact" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 
         <br>
 
@@ -191,9 +195,9 @@
         </span>
 
         <h3 class="newsletter-text"><strong>JOIN OUR MAILING LIST</strong></h3>
-        <form>
-          <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+        <form action="/" method="POST">
+          <div class="newsletter-form form-group">
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
           <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
@@ -205,10 +209,16 @@
 
     </div>
 
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+<script src="../src/index.js" type="text/javascript"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </body>
 
 </html>
